--- a/index.html
+++ b/index.html
@@ -1,17 +1,69 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Lista de Tareas</title>
-  <link rel="stylesheet" href="estilo.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Gestor de Tareas</title>
+    <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
-  <h1>Mi Lista de Tareas</h1>
-  <p>Nombre del estudiante: __________________________</p>
+    <div class="container">
+        <header>
+            <h1>Gestor de Tareas</h1>
+            <p class="estudiante">Desarrollado por: Mishel Balcazar</p>
+        </header>
 
-  <!-- Aquí irá el formulario y la lista generada con JavaScript -->
+        <form id="formulario-tarea">
+            <div class="form-group">
+                <label for="nombre">Nombre de la tarea* (max 25 caracteres)</label>
+                <input type="text" id="nombre" name="nombre" maxlength="25" required>
+            </div>
 
-  <script src="app.js"></script>
+            <div class="form-group">
+                <label for="fecha">Fecha de entrega*</label>
+                <input type="date" id="fecha" name="fecha" required>
+            </div>
+
+            <div class="form-group">
+                <label for="descripcion">Descripción</label>
+                <textarea id="descripcion" name="descripcion" rows="4"></textarea>
+            </div>
+
+            <div class="form-group">
+                <label for="tipo">Tipo de tarea</label>
+                <select id="tipo" name="tipo">
+                    <option value="" disabled selected>Seleccione un tipo</option>
+                    <option value="Universidad">Universidad</option>
+                    <option value="Personal">Personal</option>
+                    <option value="Trabajo">Trabajo</option>
+                    <option value="Hobby">Hobby</option>
+                </select>
+            </div>
+
+            <div class="form-group">
+                <label>Prioridad*</label>
+                <div class="radio-group">
+                    <label>
+                        <input type="radio" name="prioridad" value="Urgente" required> Urgente
+                    </label>
+                    <label>
+                        <input type="radio" name="prioridad" value="Normal" checked> Normal
+                    </label>
+                    <label>
+                        <input type="radio" name="prioridad" value="Baja"> Baja
+                    </label>
+                </div>
+            </div>
+
+            <button type="submit" class="btn">Agregar tarea</button>
+        </form>
+
+        <section id="lista-tareas">
+            <h2>Tus Tareas</h2>
+            <div id="tareas-container"></div>
+        </section>
+    </div>
+
+    <script src="app.js"></script>
 </body>
 </html>
